--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,138 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
+  min-height: 100vh;
+}
+
+.Choice-card {
+  margin: 0 auto 20px;
+  padding: 20px;
+  border-radius: 25px;
+  /* color: #97a75e; */
+  font-size: 30px;
+  text-transform: uppercase;
+  background-color: #fefae0;
+  border: 10px solid #ccd5ae;
+}
+
+.Choice-card img {
+  height: 225px;
+}
+
+.background-success {
+  background-color: rgba(40, 167, 69, 0.3);
+}
+
+.background-danger {
+  background-color: rgba(220, 53, 69, 0.3);
+}
+
+.background-dark {
+  background-color: rgba(52, 58, 64, 0.3);
+}
+
+.flip-horizontally {
+  transform: scaleX(-1);
+}
+
+.Button {
+}
+
+.Main {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.Scoresheet {
+  display: flex;
+  flex-direction: column-reverse;
+  justify-content: space-around;
+
+  font-size: 2rem;
+  font-weight: bold;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+/* https://erikmartinjordan.com/animation-counter */
+.Scoresheet div.goUp {
+  display: inline-flex;
+  opacity: 0;
+  transform: translate3d(0, -20px, 0);
+  transition: 0.1s ease-in-out;
+}
+.Scoresheet div.waitDown {
+  display: inline-flex;
+  opacity: 0;
+  transform: translate3d(0, 20px, 0);
+}
+.Scoresheet div.initial {
+  display: inline-flex;
+  opacity: 1;
+  transform: translate3d(0, 0px, 0);
+  transition: 0.1s ease-in-out;
+}
+
+@media (max-width: 767.98px) {
+  .row {
+    flex-direction: column-reverse; /* Show the computer on top */
   }
-  to {
-    transform: rotate(360deg);
+
+  .Choice-card {
+    min-width: 250px;
+    margin-bottom: 0;
+  }
+
+  .Choice-card .Img-wrapper img {
+    transform: rotate(-90deg); /* Rotate player's choice for mobile device */
+  }
+
+  .Choice-card .Img-wrapper.flip-horizontally img {
+    transform: rotate(90deg); /* Rotate computer's choice for mobile device */
+  }
+
+  .Choice-card img {
+    height: 100px;
+  }
+
+  .Container {
+    /* padding-top: 1rem; */
+    padding-bottom: 3rem;
+  }
+
+  .Main .col-md-5 {
+    display: flex; /* Card not too big on mobile */
+  }
+
+  .Main > .col-md-5:first-of-type .Choice-card {
+    display: flex;
+    flex-direction: column-reverse; /* Move the player name down */
+  }
+
+  .Scoresheet {
+    align-items: center;
+  }
+
+  .ButtonGroup-wrapper {
+    margin-top: 1rem;
+  }
+}
+
+@media (min-width: 768px) {
+  .Container {
+    padding-top: 4rem;
+    padding-bottom: 8rem;
+  }
+
+  .col-md-2 {
+    align-self: end;
+    padding-top: 10%;
+  }
+
+  .Scoresheet {
+    flex-direction: row;
+  }
+
+  .Choice-card h2 {
+    border-bottom: 2.5px solid black;
+    padding-bottom: 0.5rem;
+    margin-bottom: 0;
   }
 }
